[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
safety = "^3.2.14"
bandit = "^1.8.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
